--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "JZechy/ZetGrid",
+    "name": "jzechy/zetgrid",
     "description": "Jednoduchá komponenta (Datagrid) pro vykreslování seznamů v Nette.",
     "require": {
         "php": ">=5.3.0"
